# farewalk

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/farewalk/: config.py  main.py
src/farewalk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/farewalk/api/: routes.py
src/farewalk/models/: geo.py  road.py
src/farewalk/schemas/: roads.py  search.py
src/farewalk/services/: candidates.py  pricing.py  roads.py  search.py  trip_search.py
src/farewalk/static/: index.html
src/farewalk/utils/: geo.py  projections.py  spatial.py
tests/: test_candidates.py  test_geo.py  test_pricing.py  test_projections.py  test_routes.py  test_schemas.py  test_search.py  test_spatial.py
tests/integration/: test_api.py  test_uber_pricing.py
